MB-37468: Force notification of stream completing backfill

A stream completing a backfill may race with a stepping producer.
The stream may have just completed the backfill (scanned all items
but not yet completed execution of the completeBackfill function)
whilst the producer steps and finds nothing in the readyQueue (already
processed all items). If the completing backfill then does not notify
the stream as the itemsReady flag has not yet been reset (by the
stepping producer) then the producer will remove the stream from its
VBReadyQueue and not process it again. Nothing else would notify
the stream causing us to fail to call endStream or transitionState.

Change-Id: Ib430ef78261b910616576572bf76cd97c1cf47be
Reviewed-on: http://review.couchbase.org/120292
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>