engines/ep/src/dcp/stream.h
@@ -410,6 +410,10 @@ protected:
 
     std::unique_ptr<DcpResponse> backfillPhase(std::lock_guard<std::mutex>& lh);
 
+    // MB-37468: Test only hooks set via Mock class
+    std::function<void()> completeBackfillHook;
+    std::function<void()> nextHook;
+
 private:
     std::unique_ptr<DcpResponse> next(std::lock_guard<std::mutex>& lh);
 
